@@ -12,11 +12,13 @@
              "-Xmx6g"
              "-XX:+UseG1GC"
              "-XX:MetaspaceSize=500000000"
-             ;; this gives us stack traces directly
-             ;; in output instead of an edn
-             ;; file in tmp, which will be lost on
-             ;; CI
-             "-Dclojure.main.report=stderr"]
+             ;; Ensure stack traces are not elided
+             "-XX:-OmitStackTraceInFastThrow"
+             ;; this gives us stack traces directly in output instead of an edn
+             ;; file in tmp, which will be lost on CI
+             "-Dclojure.main.report=stderr"
+             ;; allow termination of threads
+             "-Djdk.attach.allowAttachSelf"]
   :src-paths ["src"]
   :test-paths ["test"]
   :global-vars {*warn-on-reflection* true}
